--- a/test.ipynb
+++ b/test.ipynb
@@ -1,13 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DISTRIBUTED GRAPHS"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "import readfof\n",
-    "from pyspark.sql import SparkSession"
+    "from pyspark.sql import SparkSession\n",
+    "import numpy as np\n",
+    "import scipy.spatial as SS"
    ]
   },
   {
@@ -21,7 +30,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/08/28 15:50:53 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/08/29 08:31:45 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -59,19 +68,13 @@
     "        SFR = False,\n",
     "        read_IDs = False\n",
     "        )\n",
-    "    \n",
-    "    # Get positions and masses\n",
-    "    # pos = FoF.GroupPos/1e06             # Halo positions in Gpc/h \n",
-    "    # mass_raw = FoF.GroupMass * 1e10     # Halo masses in Msun/h\n",
-    "\n",
-    "    # return (pos, mass_raw)\n",
     "\n",
     "    return FoF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,33 +85,410 @@
     "    pos = FoF.GroupPos/1e06             # Halo positions in Gpc/h \n",
     "    mass_raw = FoF.GroupMass * 1e10     # Halo masses in Msun/h\n",
     "\n",
-    "    return pos, mass_raw"
+    "    dim = pos.shape[0]\n",
+    "    pos_mass_matrix = np.hstack([pos, mass_raw.reshape(dim,1)])\n",
+    "\n",
+    "    return pos_mass_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2000, 2)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# path list\n",
-    "path_list = [\"/mnt/cosmo_GNN/Data/\"+str(i) for i in range(50)]"
+    "# simulations parameter\n",
+    "\n",
+    "sim_pars_file = np.loadtxt(\"/mnt/cosmo_GNN/latin_hypercube_params.txt\", dtype=float)\n",
+    "\n",
+    "sim_pars_file.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# RDD\n",
+    "# number of simulation to use\n",
+    "N_sims = 50\n",
+    "# key list\n",
+    "key_list = np.arange(N_sims)\n",
+    "# path list (key, value)\n",
+    "path_list = [(i, \"/mnt/cosmo_GNN/Data/\"+str(i)) for i in range(N_sims)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_FoF = read_cosmo_data(path_list[0][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_pos = test_FoF.GroupPos/1e06\n",
+    "test_masses = test_FoF.GroupMass*1e10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(62392, 3)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_pos.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(62392,)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_masses.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(62392, 4)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hstack([test_pos, test_masses.reshape(62392,1)]).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FoF RDD\n",
     "cosmo_rdd = sc.parallelize(path_list)\\\n",
-    "            .map(read_cosmo_data)"
+    "            .mapValues(read_cosmo_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cosmo_rdd.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cosmo_rdd.getNumPartitions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos_mass_rdd = cosmo_rdd.mapValues(get_pos_mass)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cosa = pos_mass_rdd.take(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(cosa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(cosa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(212944, 4)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cosa[1][1].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cosa_pos = cosa[1][1][:,0:3]\n",
+    "cosa_mass = cosa[1][1][:,3]\n",
+    "\n",
+    "cosa_cut = np.quantile(cosa_mass, 0.997)\n",
+    "cosa_mask = (cosa_mass >= cosa_cut)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(641, 3)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cosa_pos[cosa_mask].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(641,)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cosa_mass[cosa_mask].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(641, 4)"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cosa_dim = cosa_mass[cosa_mask].shape[0]\n",
+    "cosa_filtered = np.hstack([cosa_pos[cosa_mask], cosa_mass[cosa_mask].reshape(cosa_dim,1)])\n",
+    "cosa_filtered.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mass_filter(pos_mass_matrix):\n",
+    "\n",
+    "    mass = pos_mass_matrix[:,3]\n",
+    "    pos = pos_mass_matrix[:,0:3]\n",
+    "    cut = np.quantile(mass, 0.997)\n",
+    "    mask = (mass >= cut)\n",
+    "    mass_filtered = mass[mask]\n",
+    "    pos_filtered = pos[mask]\n",
+    "\n",
+    "    dim = mass_filtered.shape[0]\n",
+    "\n",
+    "    pos_mass_matrix_filtered = np.hstack([pos_filtered, mass_filtered.reshape(dim,1)])\n",
+    "\n",
+    "    return pos_mass_matrix_filtered\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_rdd = pos_mass_rdd.mapValues(mass_filter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(641, 4)"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_rdd.take(2)[1][1].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get KDTree\n",
+    "def get_tree(pos):\n",
+    "\n",
+    "    kd_tree = SS.KDTree(pos, leafsize=16, boxsize=1.0001)\n",
+    "\n",
+    "    return kd_tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kdtree_rdd = filtered_rdd.mapValues(lambda el: get_tree(el[:,0:3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -121,142 +501,76 @@
     {
      "data": {
       "text/plain": [
-       "50"
+       "[(0, <scipy.spatial._kdtree.KDTree at 0x7fcb0511bed0>),\n",
+       " (1, <scipy.spatial._kdtree.KDTree at 0x7fcb049d24d0>)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cosmo_rdd.count()"
+    "kdtree_rdd.take(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "16"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cosmo_rdd.getNumPartitions()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos_mass_rdd = cosmo_rdd.map(get_pos_mass)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cosa = pos_mass_rdd.take(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(cosa)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(cosa)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.13813613e+15, 1.03374206e+15, 9.20060714e+14, ...,\n",
-       "       8.84651170e+12, 8.84651170e+12, 8.84651170e+12], dtype=float32)"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cosa[1][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mass_filter(pos_mass_list):\n",
+    "# get edge indexes\n",
     "\n",
-    "    mass = pos_mass_list[0][1]\n",
-    "    pos = pos_mass_list[0][0]\n",
-    "    cut = np.quantile(mass, 0.997)\n",
-    "    mask = (pos_mass_list >= cut)\n",
-    "    mass_filtered = mass[mask]\n",
-    "    pos_filtered = pos[mask]\n",
+    "def get_edges(tree):\n",
     "\n",
-    "    return pos_filtered, mass_filtered\n"
+    "    edge_idx = tree.query_pairs(r=0.2, output_type=\"ndarray\")\n",
+    "\n",
+    "    return edge_idx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_rdd = cosmo_rdd.map()"
+    "edge_idx_rdd = kdtree_rdd.mapValues(get_edges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0,\n",
+       "  array([[ 30, 176],\n",
+       "         [ 37, 176],\n",
+       "         [ 24, 176],\n",
+       "         ...,\n",
+       "         [ 90, 161],\n",
+       "         [ 90, 145],\n",
+       "         [145, 161]])),\n",
+       " (1,\n",
+       "  array([[138, 283],\n",
+       "         [138, 562],\n",
+       "         [138, 431],\n",
+       "         ...,\n",
+       "         [476, 563],\n",
+       "         [563, 639],\n",
+       "         [476, 639]]))]"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edge_idx_rdd.take(2)"
    ]
   },
   {
