add edge features

--- a/test.ipynb
+++ b/test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,8 +123,7 @@
    "source": [
     "# number of simulation to use\n",
     "N_sims = 50\n",
-    "# key list\n",
-    "key_list = np.arange(N_sims)\n",
+    "\n",
     "# path list (key, value)\n",
     "path_list = [(i, \"/mnt/cosmo_GNN/Data/\"+str(i)) for i in range(N_sims)]"
    ]
@@ -265,6 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# array RDD\n",
     "pos_mass_rdd = cosmo_rdd.mapValues(get_pos_mass)"
    ]
   },
@@ -418,6 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# mass cut function\n",
     "def mass_filter(pos_mass_matrix):\n",
     "\n",
     "    mass = pos_mass_matrix[:,3]\n",
@@ -575,7 +576,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edg = np.array([[ 30, 176],\n",
+    "       [ 37, 176],\n",
+    "       [ 24, 176],\n",
+    "       [138, 283],\n",
+    "       [138, 562],\n",
+    "       [138, 431]])\n",
+    "\n",
+    "row, col = edg.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add reverse pairs\n",
+    "def rev_pairs(edge_index_array):\n",
+    "    reversepairs = edge_index_array[:, [1,0]]\n",
+    "    edge_index_array_r = np.vstack([edge_index_array, reversepairs])\n",
+    "    # make sure indexes are integers\n",
+    "    return edge_index_array_r.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edge_idx_rdd_r = edge_idx_rdd.mapValues(rev_pairs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joined_rdd = filtered_rdd.join(edge_idx_rdd_r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get edge features\n",
+    "def dist(joined_tuple):\n",
+    "    pos_mass = joined_tuple[0]\n",
+    "    edg_idx = joined_tuple[1]\n",
+    "    edg_idx = edg_idx.T\n",
+    "    pos = pos_mass[:, 0:3]\n",
+    "    row, col = edg_idx\n",
+    "    diff = pos[row]-pos[col]\n",
+    "\n",
+    "    # boundary conditions\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
