--- a/test.ipynb
+++ b/test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/08/29 08:31:45 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/08/29 14:40:27 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "(2000, 2)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "(62392, 3)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "(62392,)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "(62392, 4)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,16 +220,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "50"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +256,7 @@
        "16"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,11 +277,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cosa = pos_mass_rdd.take(2)"
+    "cosa = pos_mass_rdd.take(100)"
    ]
   },
   {
@@ -339,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +368,7 @@
        "(641, 3)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +388,7 @@
        "(641,)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +408,7 @@
        "(641, 4)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -455,18 +462,18 @@
        "(641, 4)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filtered_rdd.take(2)[1][1].shape"
+    "filtered_rdd.take(100)[1][1].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,35 +496,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[(0, <scipy.spatial._kdtree.KDTree at 0x7fcb0511bed0>),\n",
-       " (1, <scipy.spatial._kdtree.KDTree at 0x7fcb049d24d0>)]"
+       "[(0, <scipy.spatial._kdtree.KDTree at 0x7f6bbf6651d0>),\n",
+       " (1, <scipy.spatial._kdtree.KDTree at 0x7f6bbf665450>),\n",
+       " (2, <scipy.spatial._kdtree.KDTree at 0x7f6bbf665ed0>),\n",
+       " (3, <scipy.spatial._kdtree.KDTree at 0x7f6bbc8818d0>),\n",
+       " (4, <scipy.spatial._kdtree.KDTree at 0x7f6bbc881550>),\n",
+       " (5, <scipy.spatial._kdtree.KDTree at 0x7f6bbf6415d0>),\n",
+       " (6, <scipy.spatial._kdtree.KDTree at 0x7f6bbc882150>),\n",
+       " (7, <scipy.spatial._kdtree.KDTree at 0x7f6bbf640f50>),\n",
+       " (8, <scipy.spatial._kdtree.KDTree at 0x7f6bbf6664d0>),\n",
+       " (9, <scipy.spatial._kdtree.KDTree at 0x7f6bbf6661d0>),\n",
+       " (10, <scipy.spatial._kdtree.KDTree at 0x7f6bbf6665d0>),\n",
+       " (11, <scipy.spatial._kdtree.KDTree at 0x7f6bbf667150>),\n",
+       " (12, <scipy.spatial._kdtree.KDTree at 0x7f6bbf666b50>),\n",
+       " (13, <scipy.spatial._kdtree.KDTree at 0x7f6bbf6671d0>),\n",
+       " (14, <scipy.spatial._kdtree.KDTree at 0x7f6bbf667e50>),\n",
+       " (15, <scipy.spatial._kdtree.KDTree at 0x7f6bbc8827d0>),\n",
+       " (16, <scipy.spatial._kdtree.KDTree at 0x7f6bbf6658d0>),\n",
+       " (17, <scipy.spatial._kdtree.KDTree at 0x7f6bbf678bd0>),\n",
+       " (18, <scipy.spatial._kdtree.KDTree at 0x7f6bbf678750>),\n",
+       " (19, <scipy.spatial._kdtree.KDTree at 0x7f6bbf678ad0>),\n",
+       " (20, <scipy.spatial._kdtree.KDTree at 0x7f6bbf679850>),\n",
+       " (21, <scipy.spatial._kdtree.KDTree at 0x7f6bbf6793d0>),\n",
+       " (22, <scipy.spatial._kdtree.KDTree at 0x7f6bbf6797d0>),\n",
+       " (23, <scipy.spatial._kdtree.KDTree at 0x7f6bbf67a4d0>),\n",
+       " (24, <scipy.spatial._kdtree.KDTree at 0x7f6bbf679fd0>),\n",
+       " (25, <scipy.spatial._kdtree.KDTree at 0x7f6bbf67a550>),\n",
+       " (26, <scipy.spatial._kdtree.KDTree at 0x7f6bbf67b1d0>),\n",
+       " (27, <scipy.spatial._kdtree.KDTree at 0x7f6bbf67ad50>),\n",
+       " (28, <scipy.spatial._kdtree.KDTree at 0x7f6bbf67b150>),\n",
+       " (29, <scipy.spatial._kdtree.KDTree at 0x7f6bbf67be50>),\n",
+       " (30, <scipy.spatial._kdtree.KDTree at 0x7f6bbf67b9d0>),\n",
+       " (31, <scipy.spatial._kdtree.KDTree at 0x7f6bbf67bdd0>),\n",
+       " (32, <scipy.spatial._kdtree.KDTree at 0x7f6bbf688b50>),\n",
+       " (33, <scipy.spatial._kdtree.KDTree at 0x7f6bbf67a050>),\n",
+       " (34, <scipy.spatial._kdtree.KDTree at 0x7f6bbf688650>),\n",
+       " (35, <scipy.spatial._kdtree.KDTree at 0x7f6bbf689750>),\n",
+       " (36, <scipy.spatial._kdtree.KDTree at 0x7f6bbf6892d0>),\n",
+       " (37, <scipy.spatial._kdtree.KDTree at 0x7f6bbf6896d0>),\n",
+       " (38, <scipy.spatial._kdtree.KDTree at 0x7f6bbf68a3d0>),\n",
+       " (39, <scipy.spatial._kdtree.KDTree at 0x7f6bbf689f50>),\n",
+       " (40, <scipy.spatial._kdtree.KDTree at 0x7f6bbf68a350>),\n",
+       " (41, <scipy.spatial._kdtree.KDTree at 0x7f6bbf68b050>),\n",
+       " (42, <scipy.spatial._kdtree.KDTree at 0x7f6bbf68abd0>),\n",
+       " (43, <scipy.spatial._kdtree.KDTree at 0x7f6bbf68afd0>),\n",
+       " (44, <scipy.spatial._kdtree.KDTree at 0x7f6bbf68bcd0>),\n",
+       " (45, <scipy.spatial._kdtree.KDTree at 0x7f6bbf68b850>),\n",
+       " (46, <scipy.spatial._kdtree.KDTree at 0x7f6bbf68bc50>),\n",
+       " (47, <scipy.spatial._kdtree.KDTree at 0x7f6bbf6949d0>),\n",
+       " (48, <scipy.spatial._kdtree.KDTree at 0x7f6bbf694550>),\n",
+       " (49, <scipy.spatial._kdtree.KDTree at 0x7f6bbf6951d0>)]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kdtree_rdd.take(2)"
+    "kdtree_rdd.take(50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +613,7 @@
        "         [476, 639]]))]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,26 +672,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.6756082e-01, 6.1475968e-01, 8.9784436e-02, 1.9548385e+15],\n",
+       "       [4.1062498e-01, 1.2807573e-01, 6.6436279e-01, 1.8625701e+15],\n",
+       "       [2.0109750e-01, 7.6894172e-02, 6.4360231e-01, 1.5365154e+15],\n",
+       "       ...,\n",
+       "       [2.8888595e-01, 3.7162909e-01, 4.1354087e-01, 3.3001012e+14],\n",
+       "       [4.2436123e-01, 1.2518100e-01, 3.4866741e-01, 3.3001012e+14],\n",
+       "       [6.2315601e-01, 1.3950281e-01, 3.4553781e-01, 3.3001009e+14]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joined_rdd.take(1)[0][1][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get edge features\n",
     "def dist(joined_tuple):\n",
-    "    pos_mass = joined_tuple[0]\n",
-    "    edg_idx = joined_tuple[1]\n",
+    "    pos_mass = joined_tuple[1][0]\n",
+    "    edg_idx = joined_tuple[1][1]\n",
     "    edg_idx = edg_idx.T\n",
     "    pos = pos_mass[:, 0:3]\n",
     "    row, col = edg_idx\n",
     "    diff = pos[row]-pos[col]\n",
     "\n",
     "    # boundary conditions\n",
-    "    \n"
+    "    diff_bc = np.where(diff < -0.01, diff + 1.0, diff)\n",
+    "    diff = np.where(diff > 0.01, diff - 1.0, diff_bc)\n",
+    "\n",
+    "    # Get translational and rotational invariant features\n",
+    "\n",
+    "    # Distance d = sqrt(dx^2+dy^2+dz^2)\n",
+    "    dist = np.linalg.norm(diff, axis=1)\n",
+    "\n",
+    "    # unitdiff = diff/(dist.reshape(-1,1))    # for retrieving cos1 cos2\n",
+    "\n",
+    "    # Normalize distance by linking radius\n",
+    "    dist /= 0.2\n",
+    "\n",
+    "    return dist\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist_rdd = joined_rdd.map(dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dist_rdd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[29], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdist_rdd\u001b[49m\u001b[38;5;241m.\u001b[39mtake(\u001b[38;5;241m1\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mshape\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dist_rdd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "dist_rdd.take(1)[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
