add single graph test

--- a/test.ipynb
+++ b/test.ipynb
@@ -726,7 +726,18 @@
     "    # Normalize distance by linking radius\n",
     "    dist /= 0.2\n",
     "\n",
-    "    return dist\n"
+    "    return dist\n",
+    "\n",
+    "def cos1(joined_tuple):\n",
+    "    pos_mass = joined_tuple[1][0]\n",
+    "    edg_idx = joined_tuple[1][1]\n",
+    "    edg_idx = edg_idx.T\n",
+    "    pos = pos_mass[:, 0:3]\n",
+    "    row, col = edg_idx\n",
+    "    \n",
+    "    # Centroid of halo catalogue (3d position of the centroid)\n",
+    "    centroid = np.mean(pos, axis=0)\n",
+    "    \n"
    ]
   },
   {
@@ -756,8 +767,15 @@
     }
    ],
    "source": [
-    "dist_rdd.take(1)[0].shape"
+    "dist_rdd.take(1)[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
